--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   curved_navigation_bar: ^0.3.2
-
+  flutter_staggered_grid_view: ^0.3.0
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
