--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   flutter_staggered_grid_view: ^0.3.0
   cupertino_icons: ^0.1.2
+  flitter_svg: ^0.17.4
 
 dev_dependencies:
   flutter_test:
