--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   cupertino_icons: ^0.1.2
   flutter_svg: ^0.17.4
+  navigation_dot_bar: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +31,10 @@ flutter:
   - family: CantataOne
     fonts: 
     - asset: assets/fonts/CantataOne-Regular.ttf
+  - family: MyIcons
+    fonts:
+    - asset: assets/icons/iconfont.ttf
+    
 
   uses-material-design: true
 
