--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ flutter:
   - family: MyIcons
     fonts:
     - asset: assets/icons/iconfont.ttf
+  - family: Pigment
+    fonts:
     - asset: assets/icons/pigment.ttf
     
 
