--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_svg: ^0.17.4
   navigation_dot_bar: ^0.1.3
+  circular_check_box: ^1.0.1
 
 dev_dependencies:
   flutter_test:
