--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
       - assets/images/
       - assets/video/
       - assets/flare/
+      - assets/flare/Select_Plant.flr
 
       - assets/Articles/
       - assets/Articles/
