--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   flutter_staggered_grid_view: ^0.3.0
   cupertino_icons: ^0.1.2
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.19.0
   navigation_dot_bar: ^0.1.3
   circular_check_box: ^1.0.1
   video_player: ^0.10.9+2
@@ -59,6 +59,8 @@ flutter:
       - assets/flare/
       - assets/lottie/
       - assets/nima/
+      - assets/pngs/
+      - assets/icons/
       - assets/flare/Select_Plant.flr
 
       
